On Windows, revert to using our own helper for moving folders

On Windows, KIO::move only works for folders on the same partition. This
should be fixed in KIO, but for now we revert to our custom helper (which
doesn't show progress).

GnuPG-bug-id: 6488,6373